frontend/test/should_fail/no_exec_eval_stmt_in_alternative_or_iterated.grg
rule retypeA
{
	modify {
	}
}

rule r3
{
	alternative {
		altCase {
			modify {
			---
				eval { exec([retypeA()]); }
			}
		}
	}
	
	modify {
	}
}

rule r4
{
	iterated {
		.;
	
		modify {
		---
			eval { exec([retypeA()]); }
		}
	}
	
	modify {
	}
}
